--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ header {
     min-height: 78px;
     padding: 15px;
     background-color: #e9e9e9;
-    transition: min-height 1s linear;
+    transition: min-height 0.4s linear;
 }
 .messaging__send {
     position: absolute;
@@ -273,10 +273,8 @@ header {
 }
 .messaging__new--expanded .messaging__send {
     position: static;
-    display: block;
     opacity: 1;
-    bottom: 5px;
-    transition: opacity 1s linear 1s;
+    transition: opacity 0.5s linear 0.4s;
 }
 .messaging__new--expanded  {
     min-height: 230px;
@@ -294,6 +292,9 @@ header {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+.messaging__input:focus {
+    outline: none;
 }
 .anti-fraud {
     display: inline-flex;
@@ -371,11 +372,12 @@ header {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 6px 10px;
+    padding: 8px 10px;
     font: 16px 'Source Sans Pro', sans-serif;
     color: #656565;
 }
 .property__move:hover {
+    cursor: pointer;
     background: url(../img/pencil.svg) 90% 10px no-repeat, #f6f4f4;
 }
 .property__datepicker:before {
@@ -383,6 +385,7 @@ header {
     display: inline-block;
     vertical-align: bottom;
     margin-right: 7px;
+    margin-bottom: 1px;
     width: 16px;
     height: 16px;
     background: url('../img/datepicker.svg');
@@ -420,7 +423,7 @@ header {
 }
 .property__question {
     display: inline-block;
-    margin-bottom: 7px;
+    margin-bottom: 10px;
 }
 .property__button {
     height: 50px;
@@ -581,7 +584,7 @@ header {
         display: none;
         width: 110%;
         margin-left: -20px;
-        left: 2000px;
+        left: 500px;
     }
     .property {
         background-color: #f0f0f0;
